# HeatDiffuser

./: .gitignore  .heat_grid.f90.swp  .main.cpp.swp  CMakeLists.txt  README.md  heat_core.f90  heat_grid.f90  heat_grid_oop.f90  main.cpp  plot_temperature.py
